# helpchecker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
src/auditor/: __init__.py  auth.py  cli.py  config.py  models.py
src/auditor/analyzers/: coverage.py  style.py
src/auditor/crawler/: app_crawler.py  docs_crawler.py
src/auditor/extractors/: content.py  styles.py  terminology.py
src/auditor/reporters/: json_reporter.py  markdown.py
src/helpchecker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_coverage.py  test_style.py
