[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpchecker"
version = "0.1.0"
description = "Documentation coverage and style consistency auditor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.50.0",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "lxml>=5.2.0",
  "playwright>=1.54.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "rapidfuzz>=3.9.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
  "tinycss2>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.4.8",
]

[project.scripts]
auditor = "auditor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
